k8s/hello_ssl_deployment_gce_ingress/gce-ingress-cert.yaml
---
# Ingress ressource using GCE ingress-controller
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    spec.ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: "wke-cluster-static-ip-addr"
    networking.gke.io/managed-certificates: managed-cert
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
spec:
  rules:
  - host: web.kone-wolouho-oumar.com
    http:
      paths:
      - path: /wke-web-site
        pathType: Prefix
        backend:
          service:
            name: wke-web-site-service
            port:
              number: 5000


  # - host: prod.kone-wolouho-oumar.com
  #   http:
  #     paths:
  #     - path: /*
  #       pathType: ImplementationSpecific
  #       backend:
  #         service:
  #           name: proverbs-app-service
  #           port:
  #             number: 5000
